<resources>
    <string name="app_name">Lufthansa-Soft</string>
    <string name="title_activity_airline_schedule">Map</string>
    <string name="launcher_image">launcher_image</string>
    <string name="fly_lufthansa_text">Fly Lufthansa</string>
    <string name="choose_your_destination_text">Choose your destination</string>
    <string name="destination_hint">Destination</string>
    <string name="origin_hint">Origin</string>
    <string name="check_schedule_text">Check Schedule</string>
    <string name="select_date_text">Select Date</string>
    <string name="there_are_no_schedules_text">There are no schedules</string>
</resources>
