<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.main_ui.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:tint="#4DFFFFFF" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:scrollingCache="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="blocksDescendants"
            android:paddingTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginBottom="25dp"
                android:text="@string/choose_your_destination_text"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="1dp"
                app:cardElevation="4dp"
                android:layout_marginRight="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageButton
                        android:id="@+id/image_takeoff"
                        android:layout_width="?attr/actionBarSize"
                        android:layout_height="?attr/actionBarSize"
                        app:srcCompat="@drawable/ic_flight_takeoff"/>

                    <EditText
                        android:id="@+id/text_takeoff"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:hint="@string/origin_hint"
                        android:imeOptions="actionSearch"
                        android:focusableInTouchMode="false"
                        android:clickable="true"
                        android:tint="#999999"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:focusable="true" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="1dp"
                app:cardElevation="4dp"
                android:layout_marginRight="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageButton
                        android:id="@+id/image_landing"
                        android:layout_width="?attr/actionBarSize"
                        android:layout_height="?attr/actionBarSize"
                        app:srcCompat="@drawable/ic_flight_land"/>

                    <EditText
                        android:id="@+id/text_landing"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:hint="@string/destination_hint"
                        android:imeOptions="actionSearch"
                        android:focusableInTouchMode="false"
                        android:clickable="true"
                        android:tint="#999999"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:focusable="true" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/select_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_date_text"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/date_schedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="12-23-34"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:layout_margin="8dp"
                    android:textSize="16sp"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/check_schedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/check_schedule_text"
                android:background="#000000"
                android:paddingTop="4dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />
            </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/progress_bar_schedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_centerInParent="true"/>
                <LinearLayout
                    android:id="@+id/lyt_no_connection"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone"
                    android:layout_marginTop="40dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:tint="@android:color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/there_are_no_schedules_text"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@android:color/black"

                        android:textSize="16sp" android:textStyle="bold"
                        />


                </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/schedule_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:clipToPadding="false"/>

            </RelativeLayout>


        </LinearLayout>
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>






</RelativeLayout>